Better solution to the page margin issue.  Previous would show horizontal scroll bar on some browsers.

--- a/web-app/css/nimble.css
+++ b/web-app/css/nimble.css
@@ -484,6 +484,6 @@ button.button:hover { text-decoration: none; }
 
 #hd { display: block; }
 
-#bd { margin: 5px 0px 0px 10px; width: 100%; }
+#bd { margin: 0; padding: 5px 0px 0px 10px; width: 99%; }
 
 #ft { margin: 0px; }
